--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .mainBoard{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
     margin-top: 32px;
 }
@@ -23,7 +23,6 @@ body {
 .board {
     background-color: burlywood;
     border: 1px solid blueviolet;
-    border-radius: 0 4px 4px 4px;
     margin: 0 16px;
 }
 
@@ -35,10 +34,37 @@ body {
 .dropzone {
     padding: 16px;
     background-color: gray;
-    min-width: 332px;
+    min-width: 280px;
     min-height: 200px;
 }
 
 .postIt {
-    background-color: #141316;
+    background-color: #141316cc;
+    padding: 16px;
+    box-shadow: 0 2px -1px; /* repectivamente: eixo x, eixo y e blur*/
+    width: 250px;
+    margin: 25px 0;
+    border-radius: 0 4px 4px 4px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.status {
+    width: 30px;
+    height: 8px;
+    background: gray;
+    margin-bottom: 16px;
+    border-radius: 8px;
+}
+
+.status.blue {
+    background-color: blue;
+}
+
+.status.yellow {
+    background-color: yellow;
+}
+
+.status.green {
+    background-color: green;
 }
