script para a animação de drag and drop dos postIts

--- a/style.css
+++ b/style.css
@@ -68,3 +68,13 @@ body {
 .status.green {
     background-color: green;
 }
+
+.highlight {
+    background-color: lightpink;
+}
+
+
+/* Velocidade da animação */
+.postIt, .dropzone {
+    transition: .4s;
+}
