--- a/style.css
+++ b/style.css
@@ -16,21 +16,34 @@ html {
 }
 
 body {
-    background-color: #fafafa;
-    color: blueviolet;
+    background-color: var(--white);
+    color: black;
+}
+
+header{
+    padding: 25px;
+    text-align: center;
+    background: var(--blue);
 }
 
 .mainBoard{
     height: 75vh;
-    margin: 30px auto;
+    margin: 30px 3%;
+    border: solid 3px;
 
     display: flex;
+    justify-content: space-between;
 }
 
 .board {
-    background-color: burlywood;
-    border: 1px solid blueviolet;
-    margin: 0 16px;
+    /* background-color: lightgray; */
+    width: 25%;
+    /* height: 100%; */
+    overflow: auto;
+    /* border: 1px solid blueviolet; */
+    /* margin: 0 16px; */
+    border: solid 10px #deb887;
+    border-radius: 5px;
 }
 
 .board h3 {
@@ -39,38 +52,43 @@ body {
 }
 
 .dropzone {
-    height: 100%;
-    padding: 16px;
-    background-color: gray;
-    min-width: 280px;
-    min-height: 200px;
+    height: 85%;
+    /* background-color: gray; */
 }
 
 .postIt {
-    background-color: #141316cc;
-    padding: 16px;
-    box-shadow: 0 2px -1px; /* respectivamente: eixo x, eixo y e blur*/
     width: 250px;
-    margin: 25px 0;
-    border-radius: 0 4px 4px 4px;
+    margin: 25px auto;
+    padding:35px 10px;
+    background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%);
+    
+    text-align: center;
+    
     font-weight: 600;
     font-size: 18px;
     word-wrap: break-word;
+    box-shadow: 0 2px 10px; /* respectivamente: eixo x, eixo y e blur*/
+    
+    /* border:1px solid #E8E8E8; */
+    border-top:20px solid #fdfd86;
+    border-radius: 0 8px 8px 8px; 
+    font-family: 'Architects Daughter', cursive;
+    font-size:22px;
 }
 
 .postIt:hover{
     cursor:-webkit-grab;
 }
 
-.status {
+/* .status {
     width: 30px;
     height: 8px;
     background: gray;
     margin-bottom: 16px;
     border-radius: 8px;
-}
+} */
 
-.status.blue {
+/* .status.blue {
     background-color: blue;
 }
 
@@ -79,11 +97,11 @@ body {
 }
 
 .status.green {
-    background-color: green;
-}
+    background-color: green; */
+/* } */
 
 .highlight {
-    background-color: lightpink;
+    background-color: lightyellow;
 }
 
 
@@ -97,6 +115,14 @@ body {
     opacity: 0.3;
 }
 
-.over {
-    background-color: midnightblue;
+.toDo .over {
+    background-color: var(--red);
+}
+
+.doing .over {
+    background-color: var(--yellow);
+}
+
+.done .over {
+    background-color: var(--green);
 }
