--- a/style.css
+++ b/style.css
@@ -29,30 +29,26 @@ header{
 .mainBoard{
     height: 75vh;
     margin: 30px 3%;
-    border: solid 3px;
 
     display: flex;
     justify-content: space-between;
 }
 
 .board {
-    /* background-color: lightgray; */
     width: 25%;
-    /* height: 100%; */
     overflow: auto;
-    /* border: 1px solid blueviolet; */
-    /* margin: 0 16px; */
     border: solid 10px #deb887;
     border-radius: 5px;
 }
 
 .board h3 {
-    padding: 16px;
-    color: brown;
+    padding: 18px;
+    color: var(--darkBlue);
 }
 
 .dropzone {
-    height: 85%;
+    height: 91%;
+    padding-top: 1%;
     /* background-color: gray; */
 }
 
@@ -61,15 +57,10 @@ header{
     margin: 25px auto;
     padding:35px 10px;
     background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%);
-    
     text-align: center;
-    
-    font-weight: 600;
     font-size: 18px;
     word-wrap: break-word;
     box-shadow: 0 2px 10px; /* respectivamente: eixo x, eixo y e blur*/
-    
-    /* border:1px solid #E8E8E8; */
     border-top:20px solid #fdfd86;
     border-radius: 0 8px 8px 8px; 
     font-family: 'Architects Daughter', cursive;
@@ -80,34 +71,14 @@ header{
     cursor:-webkit-grab;
 }
 
-/* .status {
-    width: 30px;
-    height: 8px;
-    background: gray;
-    margin-bottom: 16px;
-    border-radius: 8px;
-} */
-
-/* .status.blue {
-    background-color: blue;
-}
-
-.status.yellow {
-    background-color: yellow;
-}
-
-.status.green {
-    background-color: green; */
-/* } */
-
-.highlight {
-    background-color: lightyellow;
-}
-
-
 /* Velocidade da animação */
 .postIt, .dropzone {
     transition: .4s;
+}
+
+/* Animação quando arrasta o postIt */
+.highlight {
+    background-color: lightyellow;
 }
 
 .is-dragging {
@@ -125,4 +96,5 @@ header{
 
 .done .over {
     background-color: var(--green);
+    border:none
 }
