--- a/style.css
+++ b/style.css
@@ -31,12 +31,19 @@ header{
     text-align: center;
     margin-top: 50px;
     padding: 20px;
-    height: 15vh;
+    height: 30vh;
+    width: 300px;
     border-radius: 10px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.note {
+    border: solid 3px var(--yellow);
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .addTask input{
