--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header{
     text-align: center;
     margin-top: 50px;
     padding: 20px;
-    height: 30vh;
+    height: 350px;
     width: 300px;
     border-radius: 10px;
 
